packages/jsts/tests/dbd/benchmark/TypeError/T12 X is not a function/T12-04/reproducer.js
function foo(bar) {
  bar.toUpperCase(); // Noncompliant
}

foo(1);